# tystar_movie_database

./: .pre-commit-config.yaml  Pipfile  README.md  manage.py  pyproject.toml  pytest.ini
.circleci/: config.yml
base/: admin.py  models.py
base/migrations/: 0001_initial.py  0002_auto_20201026_0713.py  0003_auto_20201026_0716.py
scripts/: crawl_csfd.py  get_movies.py  movie_filenames.txt  movie_paths.txt  populate.py
tests/: test_graphql_queries.py
tystar_movie_database/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
