[tool.poetry]
name = "tystar_movie_database"
version = "0.1.0"
description = "Django + GraphQL"
authors = ["tystar <stepankalucinova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
Django = "^3.1.2"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
